ScimJacksonProvider now handles extensions
Reducing the places an ObjectMapper can be configured.
There are two configurations that are needed.
* _generic_ jakarta and jackson annotation processing
* SCIM resources using extension parsing (requires access to SchemaRegistry)

Added IT to ensure this works end-to-end